# etsl

./: .gitignore  CMakeLists.txt  CMakePresets.json  ROADMAP.md  main.cpp
.zed/: settings.json
src/core/: events.cppm  socket_types.cppm
src/event_loop/: event_loop.cppm  event_loop_trait.cppm
src/event_loop/impl/: event_loop_iocp.cpp  event_loop_iocp.cppm
src/platform/: etl_chrono.cpp  net_ops.cpp  net_ops.cppm  net_types.cppm
src/reactor/: reactor.cppm  reactor_trait.cppm
src/reactor/impl/iocp/: reactor_iocp.cpp  reactor_iocp.cppm  reactor_iocp_defs.cppm
src/socket/: socket_address.cpp  socket_address.cppm  socket_factory.cppm  socket_independent.cpp  socket_independent.cppm  socket_raii.cppm
src/test/: smoke_loopback.cpp  smoke_loopback.cppm
src/timer/: timer.cppm  timer_bucket.cpp  timer_bucket.cppm  timer_types.cppm
src/win/: wsa_initializer.cpp  wsa_initializer.cppm
